[gd_scene load_steps=3 format=2]

[ext_resource path="res://ScriptContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/GeneratorFileContainer.gd" type="Script" id=2]

[node name="GeneratorFileContainer" type="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1259.0
margin_bottom = 699.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1252.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 19.0
text = "Generator file:"

[node name="FilePathEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 1193.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 1135.0
margin_right = 1193.0
margin_bottom = 24.0
text = "Change"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1197.0
margin_right = 1252.0
margin_bottom = 24.0
text = "Delete"

[node name="ScriptContainer" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1252.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/ScriptContainer" to="." method="_on_ScriptContainer_text_changed"]
